# TradingTS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  main.py  package-lock.json  pyproject.toml
cli/: analysis_runtime.py  dashboard.py  display_translation.py  history_loader.py  main.py  reporting.py  translated_run_materializer.py  translation_cache.py  utils.py
datasource/tushare_sqlite_mirror/: __init__.py  api.py  calculator.py  data.py  provider.py  pyproject.toml  technical_indicators.py
datasource/tushare_sqlite_mirror/docs/: README.md  market_prd.md
datasource/tushare_sqlite_mirror/indicators/: enhanced_data.py
datasource/tushare_sqlite_mirror/sync/: README.md  __init__.py  cli.py  client.py  pipeline.py  storage.py  technical_pipeline.py
docs/: README.md  USER_GUIDE.md  add-new-agent.md  agent-architecture.md  agent-tools-configuration.md  cli-guide.md  configuration-guide.md  dashboard-guide.md  data-source-guide.md  data-tool-design-issue.md  dataflow-architecture.md  datahub-architecture-review.md  datahub-architecture.md  datahub-design.md  datasource-tools-architecture.md  getting-started.md  graph-execution.md  indicator_analysis_final_report.md  remediation-plan.md  usage.md
learning/: bear_researcher_analysis.md  bull_researcher_analysis.md  langgraph_flow_control.md  market_analyst_prompt.md  multi_agent_collaboration.md  peter_lynch_researcher_implementation.md  彼得林奇.md
tests/: test_config_merge.py  test_dashboard_runtime.py  test_datasource_migration.py  test_multi_vendor_registration.py  test_news_recency.py  (+6 more)
(+188 files in other folders)
