[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingagents"
version = "0.2.3"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["tradingagents", "cli", "web", "datasource"]

[tool.hatch.build.targets.wheel.include]
files = ["config.yaml"]
